<resources>
    <string name="app_name">AppBaking</string>
    <string name="action_detail">detalhes</string>
    <string name="label_servings">Serve</string>
    <string name="n_o_existe_conex_o_com_internet">Não existe conexão com internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="background_recipe">background_recipe</string>
    <string name="label_description">descrição</string>
    <string name="button_previous">Anterior</string>
    <string name="button_next">Próximo</string>
    <string name="no_recipes_selected">No Recipes Selected</string>
    <string name="image_recipe">Image recipe</string>
</resources>
