<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <RelativeLayout
            android:id="@+id/relativeRecipeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_recipe"
                android:scaleType="centerInside"
                tools:src="@drawable/nutella_pie" />

            <TextView
                android:id="@+id/text_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/image_recipe"
                android:layout_centerHorizontal="true"
                android:background="#66000000"
                android:paddingBottom="@dimen/padding_bottom_title"
                android:paddingTop="@dimen/padding_top_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                tools:text="Nome receita" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:layout_below="@id/image_recipe"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearDescriptionRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_recipe_name"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearServeRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/padding_bottom_title"
                        android:paddingStart="@dimen/padding_bottom_title"
                        android:paddingEnd="@dimen/padding_button"
                        android:paddingTop="@dimen/padding_bottom_title"
                        android:text="@string/label_servings"
                        android:textAllCaps="true"
                        android:textColor="#424242"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="8"
                        android:textAllCaps="true"
                        android:textColor="#424242"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_action"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="@dimen/padding_button"
                    android:layout_marginRight="@dimen/padding_button"
                    android:background="@android:color/transparent"
                    android:maxHeight="48dp"
                    android:minWidth="88dp"
                    android:paddingLeft="@dimen/padding_button"
                    android:paddingRight="@dimen/padding_button"
                    android:radius="2dp"
                    android:text="@string/action_detail"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_button" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>