...
    android:id="@+id/relativeDetailStep"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.guto.appbaking.fragments.StepDetailFragment">

    <LinearLayout
        android:id="@+id/linearDetailStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:background="@android:color/white"
        android:orientation="vertical">

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="Desc" />

        <LinearLayout
            android:id="@+id/linearButtonsDetailSte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal">

            <Button
...
